--- a/examples/withChartTable.html
+++ b/examples/withChartTable.html
@@ -4,8 +4,8 @@
   <title>Kmeans Example with Chart Table</title>
   <meta charset="utf-8">
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="../dist/kmeansjs.min.js"></script>
-  <link rel="stylesheet" href="../dist/kmeansjs.min.css"></link>
+  <script src="https://unpkg.com/@ywlee/k-means-js@1.0.0/dist/kmeansjs.min.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/@ywlee/k-means-js@1.0.0/dist/kmeansjs.min.css"></link>
   <script type="text/javascript" src="https://unpkg.com/chart-table@1.0.1/dist/charttable.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/chart-table@1.0.1/dist/charttable.min.css"></link>
 </head>
